--- a/google-homepage/style.css
+++ b/google-homepage/style.css
@@ -23,12 +23,21 @@ body {
 
 #navbar {
     display: grid;
+    grid-template-columns: repeat(4, 100px);
+    grid-gap: 10px;
+    justify-content: left;
+    justify-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
 #footerlist {
+    display: grid;
+    grid-template-columns: repeat(6, 150px);
+    grid-gap: 10px;
+    justify-content: left;
+    justify-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -45,5 +54,34 @@ a:visited {
 
 a:hover {
     text-decoration: underline;
+}
+
+.round {
+    width: 100%;
+    border-radius: 15px;
+    border: 1px #000 solid;
+    padding: 5px 5px 5px 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+.corner { 
+    position: absolute;
+    top: 3px;
+    left: 5px;
+    height: 20px;
+    width: 20px;
+    z-index: 10;
+    border-radius: 10px;
+    border: none;
+    background-repeat: no-repeat;
+}
+
+.search {
+    position: relative;
+    width: 190px;
+    height: 30px;
 }
 
