Changed background color back to night mode

--- a/google-homepage/style.css
+++ b/google-homepage/style.css
@@ -15,7 +15,7 @@ nav {
 
 body {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    background: green;
+    background: #525354;
     margin: 0px auto;
     padding: 0px;
     min-height: 100vh;
